--- a/src/renderer/styles/global.css
+++ b/src/renderer/styles/global.css
@@ -28,3 +28,14 @@ html, body {
   width: 1em;
   animation: dots 1.5s infinite;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
