--- a/src/renderer/styles/global.css
+++ b/src/renderer/styles/global.css
@@ -2,22 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  /* font-family: Arial, sans-serif; */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 @keyframes dots {
-  0%, 20% {
+
+  0%,
+  20% {
     content: '.';
   }
-  40%, 60% {
+
+  40%,
+  60% {
     content: '..';
   }
-  80%, 100% {
+
+  80%,
+  100% {
     content: '...';
   }
 }
